@@ -17,5 +17,5 @@ COPY info-web/target/app.jar /app/
 COPY info-web/target/lib/*.jar /app/lib/
 
 COPY export-vault-secrets.sh /init-scripts/
-ENV JAVA_OPTS="-XX:MaxRAMPercentage=75.0  -Djava.security.egd=file:/dev/./urandom -Duser.timezone=Europe/Oslo --illegal-access=permit"
+ENV JAVA_OPTS="-XX:MaxRAMPercentage=75.0  -Djava.security.egd=file:/dev/./urandom -Duser.timezone=Europe/Oslo"
 
